# Ztips-zkapp

./: .gitignore  README.md  package.json  project_structure.txt
backend/: package-lock.json  package.json  server.js  zkVerifier.js
backend/routes/: auth.js  bounties.js  tips.js
backend/utils/: zkProofGenerator.js
contracts/: contracts.json  hardhat.config.js  package-lock.json  package.json
contracts/contracts/: ZTips.sol  ZTipsToken.sol
contracts/scripts/: deploy.js
contracts/test/: ZTips.test.js
ztips-core/: Cargo.toml  build.rs
ztips-core/methods/guest/src/: main.rs
ztips-core/src/: lib.rs  steel_view.rs
