[package]
name = "ztips-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = { version = "1.2.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
wasm-bindgen = "0.2.83"
risc0-zkvm = "0.19.1"
risc0-zkvm-platform = "0.19.1"

[build-dependencies]
risc0-build = "0.19.1"

[package.metadata.risc0]
methods = ["guest"]